--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ nbclient==0.7.2
 nbconvert==7.2.8
 nbformat==5.7.3
 nest-asyncio==1.5.6
+nltk==3.8.1
 notebook==6.5.2
 notebook_shim==0.2.2
 numpy==1.24.1
@@ -86,12 +87,14 @@ pypiwin32==223
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.4
+pyttsx3==2.90
 qtconsole==5.4.0
 QtPy==2.3.0
 regex==2023.6.3
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+scikit-learn==1.2.0
 scipy==1.9.3
 seaborn==0.12.2
 Send2Trash==1.8.0
